--- a/Android/app/src/main/res/layout/activity_login.xml
+++ b/Android/app/src/main/res/layout/activity_login.xml
@@ -86,7 +86,7 @@
                     android:ems="10"
                     android:fontFamily="@font/nanum_square_r"
                     android:hint="비밀번호 입력"
-                    android:inputType="text"
+                    android:inputType="textPassword"
                     android:paddingLeft="20sp"
                     android:textColor="#000000"
                     android:textColorHint="#9E9E9E" />
