FEAT : 바텀 네비게이션 변경

--- a/Android/app/src/main/res/layout/activity_bottom_navigation.xml
+++ b/Android/app/src/main/res/layout/activity_bottom_navigation.xml
@@ -15,8 +15,9 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom"
             android:background="#CEDDFE"
-            app:itemIconTint="@color/black"
             app:menu="@menu/bottom_navigation_menu"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:itemIconTint="@color/black"
+            app:itemIconSize="24dp"
+            app:labelVisibilityMode="unlabeled" />
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
