FEAT : 폼 UI에 최근/팔로잉 탭 추가

--- a/Android/app/src/main/res/layout/activity_form.xml
+++ b/Android/app/src/main/res/layout/activity_form.xml
@@ -39,6 +39,29 @@
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
+        <!-- 툴바 아래 최근/팔로잉 탭 -->
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/postTabLayout"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:background="@android:color/white"
+            app:tabIndicatorColor="@color/black"
+            app:tabSelectedTextColor="@color/black"
+            app:tabTextColor="@android:color/darker_gray"
+            app:layout_constraintTop_toBottomOf="@id/appBarLayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="최근" />
+            <com.google.android.material.tabs.TabItem
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="팔로잉" />
+        </com.google.android.material.tabs.TabLayout>
+
         <!-- RecyclerView는 ScrollView 밖으로 빼내어 독립적인 스크롤을 지원하도록 함 -->
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/formRecyclerView"
@@ -51,7 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
+            app:layout_constraintTop_toBottomOf="@+id/postTabLayout"
             app:spanCount="2"
             tools:ignore="NotSibling"
             tools:listitem="@layout/item_form" />
@@ -90,8 +113,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#CEDDFE"
-                app:itemIconTint="@color/black"
-                app:menu="@menu/bottom_navigation_menu" />
+                app:menu="@menu/bottom_navigation_menu"
+                app:itemIconTint="@color/bottom_nav_item_color"
+                app:itemTextColor="@color/bottom_nav_item_color"
+                app:itemIconSize="24dp"
+                app:labelVisibilityMode="labeled" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
