--- a/Android/app/src/main/res/layout/activity_order_detail.xml
+++ b/Android/app/src/main/res/layout/activity_order_detail.xml
@@ -66,7 +66,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@{order.orderDate}"
+                android:text='@{order.orderDate + " 주문"}'
                 android:textSize="17sp"
                 android:textColor="#000000"
                 android:textStyle="bold" />
@@ -99,15 +99,30 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <TextView
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="결제 정보"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    android:textColor="#000000"
-                    android:paddingBottom="8dp"
-                    android:layout_marginBottom="10sp"/>
+                    android:orientation="horizontal"
+                    android:layout_marginBottom="10sp">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="결제 정보"
+                        android:textColor="#000000"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/tvOrderStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{order.orderStatus}"
+                        android:gravity="right"
+                        android:textSize="16sp"
+                        android:textStyle="bold"
+                        android:textColor="#4CAF50"/>
+                </LinearLayout>
 
                 <!-- 상품 가격 (좌우 배치) -->
                 <LinearLayout
@@ -153,7 +168,7 @@
                         android:id="@+id/tvShippingFee"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text='@{order.deliveryOption + "    " + order.shippingFee + "원"}'
+                        android:text='@{order.shippingFee + "원"}'
                         android:textSize="14sp"
                         android:textColor="#000000" />
                 </LinearLayout>
@@ -227,7 +242,8 @@
                     android:text="@{order.recipientName}"
                     android:textSize="15sp"
                     android:textStyle="bold"
-                    android:textColor="#000000" />
+                    android:textColor="#000000"
+                    android:layout_marginBottom="9sp"/>
 
                 <TextView
                     android:id="@+id/tvRecipientAddress"
@@ -236,7 +252,7 @@
                     android:text="@{order.recipientAddress}"
                     android:textSize="14sp"
                     android:textColor="#000000"
-                    android:layout_marginTop="4dp" />
+                    android:layout_marginBottom="5sp"/>
 
                 <TextView
                     android:id="@+id/tvRecipientPhone"
@@ -244,10 +260,69 @@
                     android:layout_height="wrap_content"
                     android:text="@{order.recipientPhone}"
                     android:textSize="14sp"
+                    android:textColor="#757575" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <!-- 배송 정보 카드뷰 -->
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardAccountInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="16dp"
+            android:layout_marginTop="8dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            app:layout_constraintTop_toBottomOf="@id/cardShippingInfo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:padding="16dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="송금 계좌 정보"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="10sp" />
+
+                <TextView
+                    android:id="@+id/tvOrganizerName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{order.organizerName}"
+                    android:textSize="14sp"
                     android:textColor="#757575"
+                    android:layout_marginTop="4dp"
+                    android:layout_marginBottom="9sp"/>
+
+                <TextView
+                    android:id="@+id/tvBankName"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{order.bankName}"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
+                    android:textColor="#000000"
+                    android:layout_marginBottom="5sp"/>
+
+                <TextView
+                    android:id="@+id/tvAccountNumber"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@{order.accountNumber}"
+                    android:textSize="14sp"
+                    android:textColor="#000000"
                     android:layout_marginTop="4dp" />
             </LinearLayout>
         </androidx.cardview.widget.CardView>
+
 
         <!-- 상품 목록 -->
         <androidx.recyclerview.widget.RecyclerView
@@ -255,7 +330,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@id/cardShippingInfo"
+            app:layout_constraintTop_toBottomOf="@id/cardAccountInfo"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             tools:listitem="@layout/item_order_product" />
@@ -276,8 +351,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#CEDDFE"
-                app:itemIconTint="@color/black"
-                app:menu="@menu/bottom_navigation_menu" />
+                app:menu="@menu/bottom_navigation_menu"
+                app:itemIconTint="@color/bottom_nav_item_color"
+                app:itemTextColor="@color/bottom_nav_item_color"
+                app:itemIconSize="24dp"
+                app:labelVisibilityMode="labeled" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
